feat: added work queue

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,8 @@
 # RabbitMQ Configuration
 RABBIT_URL=amqp://admin:admin@localhost:5672
 QUEUE_NAME=tasks
+EXCHANGE_NAME=task_exchange
+ROUTING_KEY=task_routing_key
 
 # default user/password
 RABBIT_USER=admin
